changing background color of benefits section to fix contrast issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,8 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    font-size: ;
+    background-color: #0072bb;
 }
 
 .benefit-lead {
